# WQ-MdServer

./: CMakeLists.txt  MdDataStruct.h  README.md  SocketConverter.h  SocketConverter_v2.h  aaa  config.ini  contract_code.csv  test_code.csv
OutputAdapter/: CMakeLists.txt
OutputAdapter/inc/: OutputAdapter.h  TcpOutputAdapter.h  UdpOutputAdapter.h
OutputAdapter/src/: CMakeLists.txt  TcpOutputAdapter.cpp  UdpOutputAdapter.cpp  main.cpp
data/: AP805_market_data.csv  AP807_market_data.csv  AP810_market_data.csv  AP811_market_data.csv  AP901_market_data.csv  CF805_market_data.csv  CF807_market_data.csv  CF809_market_data.csv  CF901_market_data.csv  CY810_market_data.csv  CY901_market_data.csv  FG805_market_data.csv  FG807_market_data.csv  FG808_market_data.csv  FG809_market_data.csv  FG810_market_data.csv  FG811_market_data.csv  FG812_market_data.csv  FG901_market_data.csv  FG902_market_data.csv  IC1804_market_data.csv  IC1806_market_data.csv  IC1809_market_data.csv  IF1804_market_data.csv  IF1806_market_data.csv  IF1809_market_data.csv  IH1804_market_data.csv  IH1806_market_data.csv  IH1809_market_data.csv  MA805_market_data.csv  MA806_market_data.csv  MA807_market_data.csv  MA808_market_data.csv  MA809_market_data.csv  MA810_market_data.csv  MA811_market_data.csv  MA812_market_data.csv  MA901_market_data.csv  MA902_market_data.csv  OI805_market_data.csv  (+248 more)
doc/: 3-14-huziang.md  APIAdapter.md  MdServer.md  OutputAdapter.md  WZMDServer.md  文件目录结构.md
inc/: CustomMdSpi.h  CustomTradeSpi.h  Frame.h  IniConfig.h  MdEngine.h  MessageQueue.h  OutputAdapter.h  Parser.h  ThostFtdcUserApiStruct.h  alert.h  ctpwzadapter.h  custommdspi.h  frame.h  mdengine.h  mytime.h  semaphore.h  transportstruct.h  wzconstant.h  wzdatastruct.h
inc/OutputAdapter/: OutputAdapter.h  TcpOutputAdapter.h  UdpOutputAdapter.h
inc/Thread/: alertthread.h  dataenginethread.h
inc/WZUtil/: Logger.h  MemPiper.h  TcpPiper.h  UDPPiper.h  WZPiper.h  frame.h  iniparser.h
inc/WZUtil/DataEngine/: DataEngine.h  DataParse.h  MongodbEngine.h  ToDocuments.h
inc/WZUtils/WZAdapter/: frame.h  tsdatastruct.h  wzconstant.h  wzdatastruct.h
inc/WZUtils/WZConfigReader/: iniparser.h
inc/WZUtils/WZDataEngine/: dataengine.h  dataparse.h  mongodbengine.h  todocuments.h
inc/WZUtils/WZLogger/: iniparser.h  logger.h
inc/WZUtils/WZParser/: FM2TSparser.h  TS2CTPparser.h  TS2WZparser.h  WZ2CTPparser.h
inc/WZUtils/WZPiper/: wzpiper.hpp
inc/WZUtils/WZPiper/wzmem_inc/: README_WZMEM.md  logmode.h  memengine.hpp  memqueue.hpp  queuemanager.hpp  signalhandler.hpp
inc/WZUtils/WZPiper/wzsocket_inc/: tcp.h  udp.h  wzclient.hpp  wzserver.hpp  wzsocket.h
inc/WZUtils/WZQueue/: fqueue.h
inc/WZUtils/WZTimer/: timer.h
lib/: libMongodbEngine.so.1  libmongodbengine.so.1  libmongodbengine.so.1.6
log/: mdserver.ERROR  mdserver.INFO  mdserver.WARNING  mdserver.hp-server.huziang.log.ERROR.20180503-161518.13388  mdserver.hp-server.huziang.log.ERROR.20180503-161608.13820  mdserver.hp-server.huziang.log.ERROR.20180503-162339.16085  mdserver.hp-server.huziang.log.ERROR.20180503-162717.17353  mdserver.hp-server.huziang.log.ERROR.20180503-163455.19814  mdserver.hp-server.huziang.log.ERROR.20180503-163508.19858  mdserver.hp-server.huziang.log.ERROR.20180503-163608.20164  mdserver.hp-server.huziang.log.ERROR.20180503-164415.22981  mdserver.hp-server.huziang.log.ERROR.20180503-164506.23165  mdserver.hp-server.huziang.log.ERROR.20180503-172404.12016  mdserver.hp-server.huziang.log.INFO.20180503-140536.31210  mdserver.hp-server.huziang.log.INFO.20180503-155153.3235  mdserver.hp-server.huziang.log.INFO.20180503-155815.6923  mdserver.hp-server.huziang.log.INFO.20180503-155921.7252  mdserver.hp-server.huziang.log.INFO.20180503-160224.8820  mdserver.hp-server.huziang.log.INFO.20180503-160315.9286  mdserver.hp-server.huziang.log.INFO.20180503-160355.9852  mdserver.hp-server.huziang.log.INFO.20180503-160433.10092  mdserver.hp-server.huziang.log.INFO.20180503-160802.10707  mdserver.hp-server.huziang.log.INFO.20180503-161322.13092  mdserver.hp-server.huziang.log.INFO.20180503-161508.13388  mdserver.hp-server.huziang.log.INFO.20180503-161601.13820  mdserver.hp-server.huziang.log.INFO.20180503-162234.15811  mdserver.hp-server.huziang.log.INFO.20180503-162337.16085  mdserver.hp-server.huziang.log.INFO.20180503-162359.16202  mdserver.hp-server.huziang.log.INFO.20180503-162435.16366  mdserver.hp-server.huziang.log.INFO.20180503-162456.16487  mdserver.hp-server.huziang.log.INFO.20180503-162509.16561  mdserver.hp-server.huziang.log.INFO.20180503-162526.16634  mdserver.hp-server.huziang.log.INFO.20180503-162623.17049  mdserver.hp-server.huziang.log.INFO.20180503-162705.17300  mdserver.hp-server.huziang.log.INFO.20180503-162715.17353  mdserver.hp-server.huziang.log.INFO.20180503-162735.17574  mdserver.hp-server.huziang.log.INFO.20180503-163335.19448  mdserver.hp-server.huziang.log.INFO.20180503-163359.19589  mdserver.hp-server.huziang.log.INFO.20180503-163441.19733  mdserver.hp-server.huziang.log.INFO.20180503-163452.19814  (+215 more)
src/: CMakeLists.txt
src/Alert/: alert.cpp
src/Main/: ExchangeSystem_main.cpp  IniConfig.cpp  main.cpp
src/Md/: CustomMdSpi.cpp  MdEngine.cpp  custommdspi.cpp  mdengine.cpp
src/MessageQueue/: MessageQueue.cpp  messagequeue.cpp
src/OutputAdapter/: OutputAdapter.cpp  TcpOutputAdapter.cpp  UdpOutputAdapter.cpp
src/Td/: CustomTradeSpi.cpp
src/Time/: mytime.cpp
test/: CMakeLists.txt  CalInterval.py  benchmarktest.cpp  config.ini  test.cpp  test.h  test_code.csv  timetest.cpp
test/sending-time-data/: timedata.csv
test/time/: md_recvtime.csv  md_savetime.csv  md_sendtime.csv  processinterval.txt  recvtime.txt  savetime.txt  sendtime.txt
