cmake_minimum_required(VERSION 3.5)
PROJECT(MD_SERVER)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(SOURCE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/src)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(TEST_LIB ttest)

# add c++11 and -g
SET(CMAKE_CXX_FLAGS "-std=c++11 -g -pthread")

MESSAGE(STATUS "Project name is " ${PROJECT})
MESSAGE(STATUS "This is EXECUTE dir " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS "This is SOURCE dir " ${SOURCE_OUTPUT_PATH})
MESSAGE(STATUS "This is LIBRARY dir " ${LIBRARY_OUTPUT_PATH})

# include hpp
INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(inc/WZUtil/DataEngine)
INCLUDE_DIRECTORIES(test)

# link all .so
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(src)
