cmake_minimum_required(VERSION 3.5)
PROJECT(MD_SERVER)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/debug)
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/release)
SET(SOURCE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/src)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(TEST_LIB ttest)

# add c++11 and -g
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-std=c++11 -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG")

MESSAGE(STATUS "Project name is " ${PROJECT})
MESSAGE(STATUS "This is EXECUTE dir " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS "This is SOURCE dir " ${SOURCE_OUTPUT_PATH})
MESSAGE(STATUS "This is LIBRARY dir " ${LIBRARY_OUTPUT_PATH})

# include hpp
INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(inc/WZUtils/WZAdapter)
INCLUDE_DIRECTORIES(inc/WZUtils/WZCMaker)
INCLUDE_DIRECTORIES(inc/WZUtils/WZConfigReader)
INCLUDE_DIRECTORIES(inc/WZUtils/WZDataEngine)
INCLUDE_DIRECTORIES(inc/WZUtils/WZLogger)
INCLUDE_DIRECTORIES(inc/WZUtils/WZParser)
INCLUDE_DIRECTORIES(inc/WZUtils/WZPiper)
INCLUDE_DIRECTORIES(inc/WZUtils/WZQueue)
INCLUDE_DIRECTORIES(inc/WZUtils/WZTimer)

# add mongocxx and bson include dir
SET(SHARE_LIB_PREFIX /usr/local)
INCLUDE_DIRECTORIES(${SHARE_LIB_PREFIX}/include/mongocxx/v_noabi)
INCLUDE_DIRECTORIES(${SHARE_LIB_PREFIX}/include/libmongoc-1.0)
INCLUDE_DIRECTORIES(${SHARE_LIB_PREFIX}/include/bsoncxx/v_noabi)
INCLUDE_DIRECTORIES(${SHARE_LIB_PREFIX}/include/libbson-1.0)

# link all .so
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(src)
