# add c++11 and -g
SET(CMAKE_CXX_FLAGS "-std=c++11 -g")

SET(CLASS_FILE
  test.cpp
)

# shared library
ADD_LIBRARY(${TEST_LIB} SHARED ${CLASS_FILE})

# static library
ADD_LIBRARY(${TEST_LIB}_static STATIC ${CLASS_FILE})
SET_TARGET_PROPERTIES(${TEST_LIB}_static PROPERTIES OUTPUT_NAME "ttiger")
SET_TARGET_PROPERTIES(${TEST_LIB} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${TEST_LIB}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)